# SentryML

./: README.md
apps/api/: Dockerfile
apps/api/app/: main.py  models.py  schemas.py  security.py
apps/api/scripts/: bootstrap_org.py
apps/worker/: Dockerfile  requirements.txt
apps/worker/worker/: run_once.py
docs/: api.md
infra/: Dockerfile  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
infra/apps.egg-info/: PKG-INFO  SOURCES.txt
infra/apps/api/: alembic.ini  requirements.txt
infra/apps/api/alembic/: env.py
infra/apps/api/alembic/versions/: 2b4d5c1a9d77_convert_incident_event_enums_to_text.py  5a3f0d8d2b1a_add_model_deletion_fields.py  8c7b1d4a4f3a_fix_incident_state_enum.py  9d8f0e2a7b5c_add_password_reset_tokens.py  f02dc4f9f9bf_add_incident_events.py
infra/apps/api/app/: deps_auth.py  main.py  security.py
infra/apps/api/app/routers/: api_keys.py  auth.py  ui_dashboard.py  ui_incidents.py  ui_models.py  ui_settings.py
infra/apps/api/scripts/: bootstrap_org.py
infra/apps/api/tests/: test_api_key_auth.py
infra/apps/sentryml_core/: drift.py  models.py  schemas.py
infra/apps/ui/: main.py
infra/apps/ui/templates/: api_keys.html  base.html  contact.html  dashboard.html  drift.html  incident_detail.html  incidents.html  login.html  model_detail.html  models.html  privacy.html  reset_confirm.html  reset_request.html  settings.html  signup.html
infra/apps/worker/tests/: test_incident_fsm.py  test_monitoring_rules.py
infra/apps/worker/worker/: incident_fsm.py  run_once.py
